--- a/scripts/jmeter/src/test/jmeter/user.properties
+++ b/scripts/jmeter/src/test/jmeter/user.properties
@@ -8,15 +8,15 @@ MEMORY_BITES=20
 # Azure #
 #########
 QUARKUS_PROTOCOL=https
-QUARKUS_HOST=
+QUARKUS_HOST=quarkus-app.proudpond-83cd589a.eastus.azurecontainerapps.io
 QUARKUS_PORT=443
 
 MICRONAUT_PROTOCOL=https
-MICRONAUT_HOST=
+MICRONAUT_HOST=micronaut-app.proudpond-83cd589a.eastus.azurecontainerapps.io
 MICRONAUT_PORT=443
 
 SPRING_PROTOCOL=https
-SPRING_HOST=
+SPRING_HOST=springboot-app.proudpond-83cd589a.eastus.azurecontainerapps.io
 SPRING_PORT=443
 
 #########
